--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
     <section class="section projects is-medium is-white has-text-centered">
       <div class="container is-narrow">
         <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
-        <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on. Want to see more? <a class="has-text-weight-normal" href="mailto:matt@pendeavor.com">Email me</a>.</h2>
+        <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on.</h2>
         <div class="project-grid">  
           <div class="columns is-multiline is-mobile">
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
               <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/wfdesignbuild.png">
                 <figcaption>
-                  <h1 class="title is-size-5 is-size-4-widescreen">High-end, custom residential renovaters serving Fraser Valley homeowners.</h1><a class="button is-primary is-outlined is-rounded" href="https://wfdesignbuild.com" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Simple QR Code Generator for all types of inputs</h1><a class="button is-primary is-outlined is-rounded" href="https://best-qr-code-generator.netlify.app" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
                 <div class="overlay"></div>
               </figure>
@@ -272,7 +272,7 @@
         <div class="columns is-centered">
           <div class="column is-three-fifths">
             <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Startup Projects</h1>
-            <h2 class="subtitle is-size-5-desktop has-text-weight-normal">I'm a bit of a digital product junky. Over the years I've used hundreds of web and mobile apps in different industries and verticals. Eventually, I decided that it would be a fun challenge to design and build my own.</h2>
+            <h2 class="subtitle is-size-5-desktop has-text-weight-normal"> Though i am still a student in a Undergraduate programme ,my dream was to create a startup and thus one day i thought , why cant i do it , whats stopping me , and thus these are my startups so far running successfully.  </h2>
           </div>
         </div>
       </div>
@@ -284,7 +284,7 @@
             
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">     
               <div class="box"><img class="logo mb-5" src="../img/logos/shipable.svg">
-                <p>Short, focused design and growth collabs for startup tech founders.</p><a class="link" href="https://shipable.io" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>shipable.io</span></a>
+                <p>Simple and efficient software to track and manage players performance by the Academy/sports club.</p><a class="link" href="https://trackmyacademy.com" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>trackmyacademy.com</span></a>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
@@ -302,8 +302,8 @@
         <div class="callout">
           <div class="columns is-centered">
             <div class="column">
-              <h1 class="title is-spaced has-text-weight-bold">Interested in collaborating with me?</h1>
-              <h2 class="subtitle is-size-5-desktop">I’m always open to discussing product design work or partnership opportunities.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span><span>Start a conversation</span></a>
+              <h1 class="title is-spaced has-text-weight-bold">Wanna hire me or work with me?</h1>
+              <h2 class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span><span>Get in touch</span></a>
             </div>
           </div>
         </div>
@@ -314,10 +314,10 @@
         <div class="box">
           <div class="columns level">
             <div class="column level-item">
-              <h1 class="title">Start a project</h1>
+              <h1 class="title">Have a project for me ?</h1>
             </div>
             <div class="column level-item">
-              <p>Interested in working together? We should queue up a time to chat. I’ll buy the coffee.</p>
+              <p>Shall we schedule a conversation to explore potential collaboration?</p>
             </div>
             <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="/project-planner"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Let's do this</span></a></div>
           </div>
