--- a/index.html
+++ b/index.html
@@ -283,18 +283,18 @@
           <div class="columns is-multiline level">
             
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">     
-              <div class="box"><img class="logo mb-5" src="../img/logos/shipable.svg">
+              <div class="box"><img class="logo mb-5" src="TMA LOGO.png">
                 <p>Simple and efficient software to track and manage players performance by the Academy/sports club.</p><a class="link" href="https://trackmyacademy.com" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>trackmyacademy.com</span></a>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
               <div class="box"><img class="logo mb-5" src="../img/logos/houston.svg">
-                <p>Simple feedback and engagement tools that help teams ship winning products.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>on hold</span>
+                <p>Simple app to book your favorite turf in notime. </p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
               <div class="box"><img class="logo mb-5" src="../img/logos/kybercore.svg">
-                <p>Next level plug and play chassis systems for custom DIY lightsaber builds.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>on hold</span>
+                <p>Simple, seamless and efficient way to manage your school.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
           </div>
