--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
     <section class="section projects is-medium is-white has-text-centered">
       <div class="container is-narrow">
         <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
-        <h2 class="subtitle is-size-5-desktop">Here are a few past design projects I've worked on.</h2>
+        <h2 class="subtitle is-size-5-desktop">Here are a few past projects I've worked on.</h2>
         <div class="project-grid">  
           <div class="columns is-multiline is-mobile">
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/wfdesignbuild.png">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/DZjTXdC3/1792-1.png">
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">Simple QR Code Generator for all types of inputs</h1><a class="button is-primary is-outlined is-rounded" href="https://best-qr-code-generator.netlify.app" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
@@ -225,17 +225,17 @@
               </figure>
             </div>
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/burkettandco.png">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/J4Q9DQt6/ar.png">
                 <figcaption>
-                  <h1 class="title is-size-5 is-size-4-widescreen">Accounting and tax services characterized by quality, reliability and trust.</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Classic flappy bird game with a slight spice up</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
                 <div class="overlay"></div>
               </figure>
             </div>
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-              <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/chronicled.png">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/SskybxPj/apps-19816-13644806121635662-39dd8f53-413e-4f01-98c3-75d23f684dff.png">
                 <figcaption>
-                  <h1 class="title is-size-5 is-size-4-widescreen">Blockchain pioneers bringing transparency, trust, and security to supply.</h1><a class="button is-primary is-outlined is-rounded" href="https://www.chronicled.com/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Addictive and childish tic-tac-toe game.</h1><a class="button is-primary is-outlined is-rounded" href="https://rahuldk1105.github.io/Tic-Tac-Toe-Game/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
                 <div class="overlay"></div>
               </figure>
