--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               </figure>
             </div>
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/J4Q9DQt6/ar.png">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/Vk566v4h/flappy.png">
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">Classic flappy bird game with a slight spice up</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
