--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="overlay"></div>
               </figure>
             </div>
-<!--
+
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
               <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/SskybxPj/apps-19816-13644806121635662-39dd8f53-413e-4f01-98c3-75d23f684dff.png">
                 <figcaption>
@@ -241,6 +241,7 @@
                 <div class="overlay"></div>
               </figure>
             </div>
+<!--
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
               <figure class="image is-3by2"><img class="project-thumb" src="../img/projects/glcsolutions.png">
                 <figcaption>
@@ -285,7 +286,7 @@
           <div class="columns is-multiline level">
             
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">     
-              <div class="box"><img class="logo mb-5" src="TMA LOGO.png">
+             <div class="box"><img class="logo mb-5" src="https://i.postimg.cc/qqTV116G/TMA-LOGO-removebg-preview-1.png">
                 <p>Simple and efficient software to track and manage players performance by the Academy/sports club.</p><a class="link" href="https://trackmyacademy.com" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>trackmyacademy.com</span></a>
               </div>
             </div>
