--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Rahul's Portfolio">
     <meta property="og:description" content="wanna know abt me ? I bet u click this link ">
     <meta property="og:url" content="https://rahuldk.one">
+    <meta name="google-site-verification" content="9kSL6U-GbVD8xL4NltNgnCJk9jAhD5x7iHOgHjjMYAI" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
