--- a/index.html
+++ b/index.html
@@ -287,17 +287,17 @@
           <div class="columns is-multiline level">
             
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">     
-             <div class="box"><img class="logo mb-5" src="https://i.postimg.cc/4dJBjtgd/TMA-LOGO-removebg-preview-1.png">
+             <div class="box"><img class="logo mb-5" src="https://i.postimg.cc/4dJBjtgd/TMA-LOGO-removebg-preview-1.png" alt="TMA">
                 <p>Simple and efficient software to track and manage players performance by the Academy/sports club.</p><a class="link" href="https://trackmyacademy.com" target="_blank"><span class="tag is-link is-light is-medium"><i class="fal fa-arrow-up-right-from-square mr-2"></i>trackmyacademy.com</span></a>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="../img/logos/houston.svg">
+              <div class="box"><img class="logo mb-5" src="image.jpg" alt="Turf">
                 <p>Simple app to book your favorite turf in notime. </p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="../img/logos/kybercore.svg">
+              <div class="box"><img class="logo mb-5" src="app.jpg" alt="school">
                 <p>Simple, seamless and efficient way to manage your school.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
