--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/9bdc906322.js"></script>
-    <script async="" src="https://cdn.splitbee.io/sb.js"></script>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
 <!-- Google tag (gtag.js) -->
@@ -292,12 +290,12 @@
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="image.jpg" alt="Turf">
+              <div class="box"><img class="logo mb-5" src="" alt="Turf">
                 <p>Simple app to book your favorite turf in notime. </p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="app.jpg" alt="school">
+              <div class="box"><img class="logo mb-5" src="" alt="school">
                 <p>Simple, seamless and efficient way to manage your school.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
