--- a/index.html
+++ b/index.html
@@ -365,10 +365,7 @@
           </div>
           <div class="main-footer__row main-footer__row-2">
             <h5 class="heading heading-sm text-lt">DK Rahul</h5>
-            <h3 class="main-footer__short-desc">
-             You can also reach me out in <a href="mailto:rahuldk1105@gmail.com" target="_blank">&#128073 rahuldk1105@gmail.com</a>
-    </h3>
-            </h5>
+            <h3 class="main-footer__short-desc">  You can also reach me out in <a href="mailto:rahuldk1105@gmail.com" target="_blank">&#128073 rahuldk1105@gmail.com</a> </h3>
           </div>
         </div>
         <div class="main-footer__lower">
