--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
@@ -374,5 +373,6 @@
       </div>
     </footer>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="main.css" />
   </body>
 </html>
