--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
 </section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
-        <h2 class="heading heading-sec heading-sec__mb-med">
+    <!--    <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
           I am a freshmen <strong>Computer Science Engineering</strong> student and a <strong>Full Stack Developer</strong>. Coding is my Hobby! 
           </span>
            
-        </h2>
+        </h2> -->
         <div class="about__content">
           <div class="about__content-main">
             <h3 class="about__content-title">Get to know me!</h3>
