--- a/index.html
+++ b/index.html
@@ -193,7 +193,10 @@
               <div class="skills__skill">Mongo DB</div>
               <div class="skills__skill">Kali Linux</div>
               <div class="skills__skill">Wordpress</div>
-              
+              <div class="skills__skill">Shopify</div>
+              <div class="skills__skill">Canva</div>
+              <div class="skills__skill">Android</div>
+              <div class="skills__skill">ios</div>
             </div>
           </div>
         </div>
