--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="project-grid">  
           <div class="columns is-multiline is-mobile">
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/DZjTXdC3/1792-1.png" alt="QR Code Generator">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/wj7dpjtk/1792-1.png" alt="QR Code Generator">
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">Simple QR Code Generator for all types of inputs</h1><a class="button is-primary is-outlined is-rounded" href="https://best-qr-code-generator.netlify.app" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
@@ -217,7 +217,7 @@
               </figure>
             </div>
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
-              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/ZRzqKhfv/flappy-removebg-preview.png" alt="Flappy Bird">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/8PkSZHN9/flappy-removebg-preview.png" alt="Flappy Bird">
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">Classic flappy bird game with a slight spice up</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
@@ -226,7 +226,7 @@
             </div>
 
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
-              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/SskybxPj/apps-19816-13644806121635662-39dd8f53-413e-4f01-98c3-75d23f684dff.png" alt="tic-tac-toe">
+              <figure class="image is-3by2"><img class="project-thumb" src="https://i.postimg.cc/wTWdZmBv/apps-19816-13644806121635662-39dd8f53-413e-4f01-98c3-75d23f684dff.png" alt="tic-tac-toe">
                 <figcaption>
                   <h1 class="title is-size-5 is-size-4-widescreen">Addictive and childish tic-tac-toe game.</h1><a class="button is-primary is-outlined is-rounded" href="https://rahuldk1105.github.io/Tic-Tac-Toe-Game/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
