--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="" alt="Turf">
+              <div class="box"><img class="logo mb-5" src="comingsoon.png" alt="Turf">
                 <p>Simple app to book your favorite turf in notime. </p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
             <div class="column is-12-touch is-half-desktop is-one-third-widescreen level-item">
-              <div class="box"><img class="logo mb-5" src="" alt="school">
+              <div class="box"><img class="logo mb-5" src="comingsoon.png" alt="school">
                 <p>Simple, seamless and efficient way to manage your school.</p><span class="tag is-danger is-light is-medium"><i class="far fa-circle-pause mr-2"></i>coming soon..</span>
               </div>
             </div>
