--- a/index.html
+++ b/index.html
@@ -151,13 +151,6 @@
 </section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
-    <!--    <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main">About Me</span>
-          <span class="heading-sec__sub">
-          I am a freshmen <strong>Computer Science Engineering</strong> student and a <strong>Full Stack Developer</strong>. Coding is my Hobby! 
-          </span>
-           
-        </h2> -->
         <div class="about__content">
           <div class="about__content-main">
             <h3 class="about__content-title">Get to know me!</h3>
@@ -169,10 +162,7 @@
                 Chennai . I have done a lot of freelancing servieces on web development.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+                I have extensive experience with various web and mobile applications across different industries and verticals. Feel free to reach out to me here.
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
