--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         </div>
       </div>
     </header>
-    <section class="home-hero">
+    
+    <section class="home-hero" style="background-image: url('bg.png');">
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey,i am Rahul</h1>
         <div class="home-hero__info">
