--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         </div>
       </div>
     </header>
+  </section>
      <section class="home-hero">
     <section class="home-hero" style="background-image: url('bg.png');">
       <div class="home-hero__content">
