--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
       </div>
     </header>
   </section>
-    <section class="home-hero" style="background-image: url('bg.png');">
+    
+    <section class="home-hero">
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey,i am Rahul</h1>
         <div class="home-hero__info">
