--- a/index.html
+++ b/index.html
@@ -20,68 +20,58 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-
-      <div class="cursor"></div>
+<section class="background-section">
+    <div class="cursor"></div>
     <header class="header">
-      <div class="header__content">
-        <div class="header__logo-container">
-          <div class="header__logo-img-cont">
-            <img
-              src="myphoto.jpg"
-              alt="Logo Image"
-              class="header__logo-img"
-            />
-          </div>
-          <span class="header__logo-sub">DK Rahul</span>
+        <div class="header__content">
+            <div class="header__logo-container">
+                <div class="header__logo-img-cont">
+                    <img src="myphoto.jpg" alt="DK Rahul Logo" class="header__logo-img" />
+                </div>
+                <span class="header__logo-sub">DK Rahul</span>
+            </div>
+            <nav class="header__main">
+                <ul class="header__links">
+                    <li class="header__link-wrapper">
+                        <a href="index.html" class="header__link">Home</a>
+                    </li>
+                    <li class="header__link-wrapper">
+                        <a href="index.html#about" class="header__link">About</a>
+                    </li>
+                    <li class="header__link-wrapper">
+                        <a href="index.html#projects" class="header__link">Projects</a>
+                    </li>
+                    <li class="header__link-wrapper">
+                        <a href="index.html#contact" class="header__link">Contact</a>
+                    </li>
+                </ul>
+                <div class="header__main-ham-menu-cont">
+                    <img src="ham-menu.svg" alt="Hamburger Menu Icon" class="header__main-ham-menu" />
+                    <img src="ham-menu-close.svg" alt="Close Menu Icon" class="header__main-ham-menu-close d-none" />
+                </div>
+            </nav>
         </div>
-        <div class="header__main">
-          <ul class="header__links">
-            <li class="header__link-wrapper">
-              <a href="index.html" class="header__link"> Home </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#about" class="header__link">About </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#projects" class="header__link"> Projects </a>
-            </li>
-            <li class="header__link-wrapper">
-              <a href="index.html#contact" class="header__link"> Contact </a>
-            </li>
-          </ul>
-          <div class="header__main-ham-menu-cont">
-            <img 
-              src="ham-menu.svg"
-              alt="hamburger menu"
-              class="header__main-ham-menu"
-            />
-            <img
-              src="ham-menu-close.svg"
-              alt="hamburger menu close"
-              class="header__main-ham-menu-close d-none"
-            />
-          </div>
+        <div class="header__sm-menu">
+            <div class="header__sm-menu-content">
+                <ul class="header__sm-menu-links">
+                    <li class="header__sm-menu-link">
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li class="header__sm-menu-link">
+                        <a href="index.html#about">About</a>
+                    </li>
+                    <li class="header__sm-menu-link">
+                        <a href="index.html#projects">Projects</a>
+                    </li>
+                    <li class="header__sm-menu-link">
+                        <a href="index.html#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-      </div>
-      <div class="header__sm-menu">
-        <div class="header__sm-menu-content">
-          <ul class="header__sm-menu-links">
-            <li class="header__sm-menu-link">
-              <a href="index.html"> Home </a>
-            </li>
-            <li class="header__sm-menu-link">
-              <a href="index.html#about"> About </a>
-            </li>
-            <li class="header__sm-menu-link">
-              <a href="index.html#projects"> Projects </a>
-            </li>
-            <li class="header__sm-menu-link">
-              <a href="index.html#contact"> Contact </a>
-            </li>
-          </ul>
-        </div>
-      </div>
     </header>
+</section>
+
 
     
       <section class="home-hero">
