--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
         </div>
       </div>
 </section>
+  </section>
     <section id="about" class="about sec-pad">
       <div class="main-container">
         <div class="about__content">
