--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-   <header class="header">
+  <section class="background-section">
+      <div class="cursor"></div>
+    <header class="header">
       <div class="header__content">
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="https://i.postimg.cc/TwY74D31/profile-pic-8.png"
-              alt="Ram Maheshwari Logo Image"
+              src="myphoto.jpg"
+              alt="Logo Image"
               class="header__logo-img"
             />
           </div>
@@ -35,26 +37,26 @@
         <div class="header__main">
           <ul class="header__links">
             <li class="header__link-wrapper">
-              <a href="./" class="header__link"> Home </a>
+              <a href="index.html" class="header__link"> Home </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./#about" class="header__link">About </a>
+              <a href="index.html#about" class="header__link">About </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./#projects" class="header__link"> Projects </a>
+              <a href="index.html#projects" class="header__link"> Projects </a>
             </li>
             <li class="header__link-wrapper">
-              <a href="./#contact" class="header__link"> Contact </a>
+              <a href="index.html#contact" class="header__link"> Contact </a>
             </li>
           </ul>
           <div class="header__main-ham-menu-cont">
-            <img
-              src="./assets/svg/ham-menu.svg"
+            <img 
+              src="ham-menu.svg"
               alt="hamburger menu"
               class="header__main-ham-menu"
             />
             <img
-              src="./assets/svg/ham-menu-close.svg"
+              src="ham-menu-close.svg"
               alt="hamburger menu close"
               class="header__main-ham-menu-close d-none"
             />
@@ -65,24 +67,22 @@
         <div class="header__sm-menu-content">
           <ul class="header__sm-menu-links">
             <li class="header__sm-menu-link">
-              <a href="./"> Home </a>
+              <a href="index.html"> Home </a>
             </li>
-
             <li class="header__sm-menu-link">
-              <a href="./#about"> About </a>
+              <a href="index.html#about"> About </a>
             </li>
-
             <li class="header__sm-menu-link">
-              <a href="./#projects"> Projects </a>
+              <a href="index.html#projects"> Projects </a>
             </li>
-
             <li class="header__sm-menu-link">
-              <a href="./#contact"> Contact </a>
+              <a href="index.html#contact"> Contact </a>
             </li>
           </ul>
         </div>
       </div>
     </header>
+  </section>
 
     <section class="home-hero" style="background-image: url('bg.png');">
       <div class="home-hero__content">
