--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="home-hero__social">
           <a href="https://www.instagram.com/dkrahul_11/" class="home-hero__social-icon-link">
             <img
-              src="yt-ico.png"
+              src="insta.png"
               alt="icon"
               class="home-hero__social-icon"
             />
@@ -142,7 +142,7 @@
             class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
           >
             <img
-              src="insta-ico.png"
+              src="wa.png"
               alt="icon"
               class="home-hero__social-icon"
             />
