--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="home-hero__social">
           <a href="https://github.com/rahuldk1105" class="home-hero__social-icon-link">
             <img
-              src="github-ico.png"
+              src="git.png"
               alt="icon"
               class="home-hero__social-icon"
             />
