--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <a target="_blank" rel="noreferrer" href="https://github.com/rahuldk1105">
                 <img
                   class="main-footer__icon"
-                  src="github-ico.png"
+                  src="git.png"
                   alt="icon"
                 />
               </a>
@@ -343,14 +343,14 @@
               <a target="_blank" rel="noreferrer" href="https://www.instagram.com/dkrahul_11/">
                 <img
                   class="main-footer__icon"
-                  src="yt-ico.png"
+                  src="insta.png"
                   alt="icon"
                 />
               </a>
               <a target="_blank" rel="noreferrer" href="https://wa.me/7904078884">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
-                  src="insta-ico.png"
+                  src="wa.png"
                   alt="icon"
                 />
               </a>
