--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="columns is-centered">
             <div class="column">
               <h1 class="title is-spaced has-text-weight-bold">Wanna hire me or work with me?</h1>
-              <h2 class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span><span>Get in touch</span></a>
+              <h2 class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span>Get in touch</a>
             </div>
           </div>
         </div>
