--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <div class="columns is-centered">
             <div class="column">
               <h1 class="title is-spaced has-text-weight-bold">Wanna hire me or work with me?</h1>
-              <h2 class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span>Get in touch</a>
+              <h2 class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span>Leave a message</a>
             </div>
           </div>
         </div>
@@ -305,7 +305,7 @@
             <div class="column level-item">
               <p>Shall we schedule a conversation to explore potential collaboration?</p>
             </div>
-            <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="/project-planner"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Let's do this</span></a></div>
+            <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="/project-planner"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Reach me out</span></a></div>
           </div>
         </div>
       </div>
