--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
     </section>
     <section class="section projects is-medium is-white has-text-centered">
       <div class="container is-narrow">
-        <h1 class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
-        <h2 class="subtitle is-size-5-desktop">Here are a few past projects I've worked on.</h2>
+        <h1 style="color:white;" class="title is-spaced is-size-3-desktop is-size-4-mobile">My Recent Work</h1>
+        <h2 style="color:white;"class="subtitle is-size-5-desktop">Here are a few past projects I've worked on.</h2>
         <div class="project-grid">  
           <div class="columns is-multiline is-mobile">
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop">
