--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="main-container">
         <div class="about__content">
           <div class="about__content-main">
-            <h3 class="about__content-title">Get to know me!</h3>
+            <h3 style="color:black;" class="about__content-title">Get to know me!</h3>
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
@@ -171,7 +171,7 @@
             >
           </div>
           <div class="about__content-skills">
-            <h3 class="about__content-title">My Skills</h3>
+            <h3 style="color:black;" class="about__content-title">My Skills</h3>
             <div class="skills">
               <div class="skills__skill">React</div>
               <div class="skills__skill">TailWind</div>
