--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
             <div class="column level-item">
               <p>Shall we schedule a conversation to explore potential collaboration?</p>
             </div>
-            <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="/project-planner"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Reach me out</span></a></div>
+            <div class="column level-item"><a class="button is-success is-outlined is-rounded is-medium has-text-weight-normal" href="contactform.html"><span class="icon"><i class="fa-regular fa-hand-horns"></i></span><span>Reach me out</span></a></div>
           </div>
         </div>
       </div>
