--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           <div class="columns is-centered">
             <div class="column">
               <h1 style="color:white;" class="title is-spaced has-text-weight-bold">Wanna hire me or work with me?</h1>
-              <h2 style="color:white;" class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a style="color:white;" class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="/startup-inquiry"><span class="icon"><i class="fa-regular fa-message-lines"></i></span>Leave a message</a>
+              <h2 style="color:white;" class="subtitle is-size-5-desktop">I welcome conversations about collaborating on product design or exploring potential partnerships.</h2><a style="color:white;" class="button is-primary is-outlined is-rounded is-medium has-text-weight-normal" href="contactform.html"><span class="icon"><i class="fa-regular fa-message-lines"></i></span>Leave a message</a>
             </div>
           </div>
         </div>
