--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="column is-12-mobile is-half-tablet is-one-third-desktop"> 
               <figure class="image is-3by2"><img class="project-thumb" src="flappy.png" alt="Flappy Bird">
                 <figcaption>
-                  <h1 class="title is-size-5 is-size-4-widescreen">Classic flappy bird game with a slight spice up</h1><a class="button is-primary is-outlined is-rounded" href="https://www.burkettandco.ca/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
+                  <h1 class="title is-size-5 is-size-4-widescreen">Classic flappy bird game with a slight spice up</h1><a class="button is-primary is-outlined is-rounded" href="https://rahuldk1105.github.io/Flappy-Bird/" target="_blank"><span>Visit Website</span><span class="icon"><i class="fas fa-angle-right"></i></span></a>
                 </figcaption>
                 <div class="overlay"></div>
               </figure>
